--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ DEB_CONFIGURE_EXTRA_FLAGS := --disable-scrollkeeper \
 			--enable-comics \
 			--enable-introspection
 
-DEB_DH_MAKESHLIBS_ARGS += --exclude=libevince-properties-page.so \
+DEB_DH_MAKESHLIBS_ARGS += -X /usr/lib/nautilus/ -X /usr/lib/evince/ \
 	-V'libevince3-3 (>= 3.0.0)'
 
 DEB_DH_STRIP_ARGS_evince-gtk =
