Enable XPS support.

--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libdjvulibre-dev (>= 3.5.17),
                libkpathsea-dev,
                libt1-dev,
+               libgxps-dev (>= 0.2.1),
                autotools-dev,
                gobject-introspection (>= 0.9.12-4~),
                libgirepository1.0-dev (>= 0.9.12),
