--- a/debian/control
+++ b/debian/control
@@ -59,7 +59,9 @@ Recommends: dbus-x11,
 Provides: pdf-viewer,
           postscript-viewer,
           djvu-viewer
-Suggests: unrar, poppler-data, nautilus
+Suggests: unrar,
+          poppler-data,
+          nautilus
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DJVU, DVI and Portable
@@ -100,7 +102,10 @@ Recommends: dbus-x11
 Provides: pdf-viewer,
           postscript-viewer,
           djvu-viewer
-Suggests: gvfs, unrar, poppler-data, nautilus
+Suggests: gvfs,
+          unrar,
+          poppler-data,
+          nautilus
 Description: Document (PostScript, PDF) viewer (GTK+ version)
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DJVU, DVI and Portable
@@ -115,7 +120,6 @@ Package: evince-common
 Architecture: all
 Depends: ${misc:Depends},
          gsettings-desktop-schemas
-Replaces: evince (<< 2.26.2), evince-gtk (<< 2.26.2)
 Description: Document (PostScript, PDF) viewer - common files
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DJVU, DVI and Portable
@@ -131,7 +135,7 @@ Architecture: any
 Section: libs
 Depends: ${shlibs:Depends},
          ${misc:Depends}
-Replaces: evince (<< 2.26.2), evince-gtk (<< 2.26.2), libevince3
+Replaces: libevince3
 Breaks: libevince3
 Description: Document (PostScript, PDF) rendering library
  This package contains evince-related libraries for rendering and displaying
@@ -150,7 +154,6 @@ Depends: libevince3-3 (= ${binary:Version}),
          ${misc:Depends},
          libgtk-3-dev (>= 3.0.2),
          libglib2.0-dev (>= 2.25.1)
-Replaces: evince (<< 2.26.2), evince-gtk (<< 2.26.2)
 Description: Document (PostScript, PDF) rendering library - development files
  This package contains evince-related libraries for rendering and displaying
  Evince documents like PostScript (PS), Encapsulated PostScript (EPS), DJVU,
