--- a/debian/control
+++ b/debian/control
@@ -35,9 +35,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libgxps-dev (>= 0.2.1),
                autotools-dev,
                gobject-introspection (>= 0.9.12-4~),
-               libgirepository1.0-dev (>= 0.9.12),
-               gir1.2-glib-2.0,
-               gir1.2-gtk-3.0,
+               libgirepository1.0-dev (>= 0.10.7-1~),
                gsettings-desktop-schemas-dev
 Standards-Version: 3.9.2
 Homepage: http://www.gnome.org/projects/evince/
