--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.
 Uploaders: Frederic Peters <fpeters@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: cdbs (>= 0.4.90),
                debhelper (>= 8),
+               dpkg-dev (>= 1.16.1),
                dh-autoreconf,
                intltool (>= 0.35.0),
                gnome-pkg-tools (>= 0.10),
