--- a/debian/control.in
+++ b/debian/control.in
@@ -13,10 +13,10 @@ Build-Depends: cdbs (>= 0.4.90),
                gtk-doc-tools (>= 1.0),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
-               libgtk-3-dev (>= 3.0.2),
+               libgtk-3-dev (>= 3.7.5),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.34),
-               libgnome-keyring-dev (>= 2.22.0),
+               libsecret-1-dev (>= 0.5),
                gnome-icon-theme (>= 2.17.1),
                libxml2-dev (>= 2.5.0),
                libsm-dev (>= 2:1.0.0),
