--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,10 @@
 #!/usr/bin/make -f
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-include /usr/share/dpkg/buildflags.mk
+
+DEB_BUILDDIR = debian/build
+DEB_MAKE_DESTDIRSKEL = $(CURDIR)/debian/install/@FLAVOR@
+DEB_MAKE_FLAVORS = evince evince-gtk
 
 include /usr/share/cdbs/1/rules/autoreconf.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
@@ -10,11 +13,11 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-version.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
-DEB_BUILDDIR := $(CURDIR)/debian/build/evince
-DEB_BUILDDIR_evince-gtk := $(CURDIR)/debian/build/evince-gtk
-DEB_DESTDIR_evince-gtk := $(CURDIR)/debian/evince-gtk
+DEB_DH_INSTALL_ARGS += --sourcedir=debian/install/evince
+DEB_DH_INSTALL_ARGS_evince-gtk += --sourcedir=debian/install/evince-gtk
 
-DEB_CONFIGURE_EXTRA_FLAGS := --disable-scrollkeeper \
+DEB_CONFIGURE_EXTRA_FLAGS = \
+			--disable-scrollkeeper \
 			--enable-gtk-doc \
 			--enable-djvu \
 			--enable-dvi \
@@ -28,36 +31,25 @@ DEB_DH_MAKESHLIBS_ARGS += -X /usr/lib/nautilus/ -X /usr/lib/evince/ \
 
 DEB_DH_STRIP_ARGS_evince-gtk =
 
-#cdbs should do this, but doesn't (see #424636)
-clean::
-	rm -rf $(DEB_BUILDDIR) $(DEB_BUILDDIR_evince-gtk)
-
-configure/evince-gtk:: $(DEB_BUILDDIR_evince-gtk)/config.status
-$(DEB_BUILDDIR_evince-gtk)/config.status:
-	cd $(DEB_BUILDDIR_evince-gtk) && \
-		$(DEB_CONFIGURE_SCRIPT_ENV) $(DEB_CONFIGURE_SCRIPT) \
-			$(DEB_CONFIGURE_NORMAL_ARGS) \
-			$(cdbs_configure_flags) \
-			$(DEB_CONFIGURE_EXTRA_FLAGS) \
+DEB_CONFIGURE_FLAGS_evince-gtk = \
 			--without-keyring \
 			--disable-nautilus \
 			--disable-introspection \
-			--disable-gtk-doc \
-			$(DEB_CONFIGURE_USER_FLAGS)
-
-build/evince-gtk::
-	make -C $(DEB_BUILDDIR_evince-gtk)
+			--disable-gtk-doc
 
 install/evince-gtk::
-	make -C $(DEB_BUILDDIR_evince-gtk) install DESTDIR=$(DEB_DESTDIR_evince-gtk)
-	rm -rf debian/evince-gtk/usr/share \
-		debian/evince-gtk/etc \
-		debian/evince-gtk/usr/include
-	rm -rf debian/evince-gtk/usr/lib/lib*
-	rm -rf debian/evince-gtk/usr/lib/nautilus
-	rm -rf debian/evince-gtk/usr/lib/pkgconfig
-	rm -rf debian/evince-gtk/usr/lib/girepository*
-	rm -rf debian/evince-gtk/usr/lib/evince/4
+	rm -rf debian/install/evince-gtk/usr/share
+	rm -rf debian/install/evince-gtk/etc
+	rm -rf debian/install/evince-gtk/usr/include
+	rm -rf debian/install/evince-gtk/usr/lib/lib*
+	rm -rf debian/install/evince-gtk/usr/lib/nautilus
+	rm -rf debian/install/evince-gtk/usr/lib/pkgconfig
+	rm -rf debian/install/evince-gtk/usr/lib/girepository*
+	rm -rf debian/install/evince-gtk/usr/lib/evince/4
+
+install/evince-common::
+	dh_install -p${cdbs_curpkg} --ignore=debian/${cdbs_curpkg}.install \
+	debian/evince.xpm usr/share/pixmaps
 
 binary-install/evince-common::
 	rm -rf debian/evince-common/usr/share/gtk-doc
