* debian/control.in:   + Build depend on libtiff-dev instead of libtiff4-dev. Closes: #736001.

--- a/debian/control.in
+++ b/debian/control.in
@@ -24,7 +24,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libnautilus-extension-dev (>= 2.91.4),
                libpoppler-glib-dev (>= 0.18.0),
                libspectre-dev (>= 0.2.0),
-               libtiff4-dev,
+               libtiff-dev,
                libdjvulibre-dev (>= 3.5.17),
                libkpathsea-dev,
                libgxps-dev (>= 0.2.1),
