--- a/debian/control.in
+++ b/debian/control.in
@@ -7,13 +7,14 @@ Build-Depends: cdbs (>= 0.4.90),
                debhelper (>= 8),
                dpkg-dev (>= 1.16.1),
                dh-autoreconf,
+               adwaita-icon-theme,
                intltool (>= 0.35.0),
                gnome-pkg-tools (>= 0.10),
                yelp-tools,
                gtk-doc-tools (>= 1.0),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
-               libgtk-3-dev (>= 3.8.0),
+               libgtk-3-dev (>= 3.13),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.36),
                libsecret-1-dev (>= 0.5),
