--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,7 @@ Build-Depends: cdbs (>= 0.4.90),
                gsettings-desktop-schemas-dev,
                gnome-common
 Standards-Version: 3.9.4
-Homepage: http://www.gnome.org/projects/evince/
+Homepage: https://wiki.gnome.org/Apps/Evince
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/evince
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/evince
 
