--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: cdbs (>= 0.4.90),
                gtk-doc-tools (>= 1.0),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
+               libgnome-desktop-3-dev,
                libgtk-3-dev (>= 3.13),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.36),
