* Team upload. * Build only the full-flavored variant of Evince (Closes: #755071).   + Disable building of the evince-gtk flavor.   + Turn evince-gtk into a transitional package that depends on evince.   + Add Breaks and Replaces to the evince package accordingly.   + Move gvfs from Recommends to Suggests.   + Exclude the "/usr/lib/nautilus/" path from dh_shlibdeps to avoid     the infamous dependency on libnautilus*. * Append "-Wl,--as-needed -Wl,-z,defs" to LDFLAGS to avoid more   unnecessary dependencies.

--- a/debian/control
+++ b/debian/control
@@ -44,7 +44,6 @@ Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/evince
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/evince
 
 Package: evince
-Conflicts: evince-gtk
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
@@ -54,14 +53,16 @@ Depends: ${shlibs:Depends},
          evince-common (<< ${gnome:NextVersion}),
          gnome-icon-theme-symbolic (>= 2.17.1),
          shared-mime-info
-Recommends: dbus-x11,
-            gvfs
+Recommends: dbus-x11
 Provides: pdf-viewer,
           postscript-viewer,
           djvu-viewer
-Suggests: unrar,
+Suggests: gvfs,
+          unrar,
           poppler-data,
           nautilus
+Breaks: evince-gtk (<< 3.14.1-3~)
+Replaces: evince-gtk (<< 3.14.1-3~)
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
@@ -89,34 +90,13 @@ Description: Document (PostScript, PDF) viewer - debugging symbols
  This package contains the debugging symbols needed by gdb.
 
 Package: evince-gtk
-Section: x11
-Conflicts: evince
+Section: oldlibs
+Priority: extra
 Architecture: any
-Depends: ${shlibs:Depends},
+Depends: evince (= ${binary:Version}),
          ${misc:Depends},
-         libevdocument3-4 (= ${binary:Version}),
-         libevview3-3 (= ${binary:Version}),
-         evince-common (>= ${gnome:Version}),
-         evince-common (<< ${gnome:NextVersion}),
-         gnome-icon-theme-symbolic (>= 2.17.1),
-         shared-mime-info
-Recommends: dbus-x11
-Provides: pdf-viewer,
-          postscript-viewer,
-          djvu-viewer
-Suggests: gvfs,
-          unrar,
-          poppler-data,
-          nautilus
-Description: Document (PostScript, PDF) viewer (GTK+ version)
- Evince is a simple multi-page document viewer.  It can display and print
- PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
- Document Format (PDF) and XML Paper Specification (XPS) files.
- When supported by the document, it also allows searching for text,
- copying text to the clipboard, hypertext navigation, and
- table-of-contents bookmarks.
- .
- This version of evince is built without GNOME keyring support.
+Description: dummy package for the transition from evince-gtk to evince
+ This package is a transitional dummy package. It can be safely removed.
 
 Package: evince-common
 Architecture: all
@@ -130,7 +110,7 @@ Description: Document (PostScript, PDF) viewer - common files
  copying text to the clipboard, hypertext navigation, and
  table-of-contents bookmarks.
  .
- This package contains shared files for evince and evince-gtk packages.
+ This package contains architecture-independent files for evince.
 
 Package: libevdocument3-4
 Architecture: any
