--- a/debian/control.in
+++ b/debian/control.in
@@ -14,9 +14,11 @@ Build-Depends: cdbs (>= 0.4.90),
                gtk-doc-tools (>= 1.0),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
-               libgtk-3-dev (>= 3.15.3),
+               libgtk-3-dev (>= 3.16.0),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.36),
+               libgstreamer1.0-dev,
+               libgstreamer-plugins-base1.0-dev,
                libsecret-1-dev (>= 0.5),
                libxml2-dev (>= 2.5.0),
                libsm-dev (>= 2:1.0.0),
