--- a/debian/control.in
+++ b/debian/control.in
@@ -124,7 +124,8 @@ Package: libevview3-3
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends},
-         ${misc:Depends}
+         ${misc:Depends},
+         gstreamer0.10-plugins-base
 Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
  This package contains libevview, which provides GTK+ widgets for displaying
  documents.
