libevview3-3: depend on gstreamer1.0-plugins-base

--- a/debian/control
+++ b/debian/control
@@ -128,7 +128,8 @@ Package: libevview3-3
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends},
-         ${misc:Depends}
+         ${misc:Depends},
+         gstreamer1.0-plugins-base
 Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
  This package contains libevview, which provides GTK+ widgets for displaying
  documents.
