--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: evince
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Michael Biebl <biebl@debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: cdbs (>= 0.4.90),
                debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
@@ -21,6 +21,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libgtk-3-dev (>= 3.16.0),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.36),
+               libgnome-desktop-3-dev,
                libgstreamer1.0-dev,
                libgstreamer-plugins-base1.0-dev,
                libsecret-1-dev (>= 0.5),
