--- a/debian/control.in
+++ b/debian/control.in
@@ -17,6 +17,7 @@ Build-Depends: cdbs (>= 0.4.90),
                libgtk-3-dev (>= 3.16.0),
                libgail-3-dev (>= 3.0.2),
                libglib2.0-dev (>= 2.36),
+               libgnome-desktop-3-dev,
                libgstreamer1.0-dev,
                libgstreamer-plugins-base1.0-dev,
                libsecret-1-dev (>= 0.5),
@@ -67,24 +68,6 @@ Description: Document (PostScript, PDF) viewer
  When supported by the document, it also allows searching for text,
  copying text to the clipboard, hypertext navigation, and
  table-of-contents bookmarks.
-
-Package: evince-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Depends: ${misc:Depends},
-         evince (= ${binary:Version}),
-         libevdocument3-4 (= ${binary:Version}),
-         libevview3-3 (= ${binary:Version})
-Description: Document (PostScript, PDF) viewer - debugging symbols
- Evince is a simple multi-page document viewer.  It can display and print
- PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
- Document Format (PDF) and XML Paper Specification (XPS) files.
- When supported by the document, it also allows searching for text,
- copying text to the clipboard, hypertext navigation, and
- table-of-contents bookmarks.
- .
- This package contains the debugging symbols needed by gdb.
 
 Package: evince-gtk
 Section: oldlibs
