--- a/debian/control
+++ b/debian/control
@@ -8,14 +8,14 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: cdbs (>= 0.4.90),
-               debhelper (>= 9),
+               debhelper (>= 9.20160114~),
                dpkg-dev (>= 1.16.1),
                dh-autoreconf,
                adwaita-icon-theme,
                intltool (>= 0.35.0),
                gnome-pkg-tools (>= 0.10),
                yelp-tools,
-               gtk-doc-tools (>= 1.0),
+               gtk-doc-tools (>= 1.13),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
                libgtk-3-dev (>= 3.16.0),
@@ -72,24 +72,6 @@ Description: Document (PostScript, PDF) viewer
  When supported by the document, it also allows searching for text,
  copying text to the clipboard, hypertext navigation, and
  table-of-contents bookmarks.
-
-Package: evince-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Depends: ${misc:Depends},
-         evince (= ${binary:Version}),
-         libevdocument3-4 (= ${binary:Version}),
-         libevview3-3 (= ${binary:Version})
-Description: Document (PostScript, PDF) viewer - debugging symbols
- Evince is a simple multi-page document viewer.  It can display and print
- PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
- Document Format (PDF) and XML Paper Specification (XPS) files.
- When supported by the document, it also allows searching for text,
- copying text to the clipboard, hypertext navigation, and
- table-of-contents bookmarks.
- .
- This package contains the debugging symbols needed by gdb.
 
 Package: evince-gtk
 Section: oldlibs
@@ -164,7 +146,7 @@ Provides: gir1.2-evince-document-3.0,
           gir1.2-evince-view-3.0
 Description: GObject introspection data for the evince libraries
  This package contains introspection data for the libevview and
- libevdocument library.
+ libevdocument libraries.
  .
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
