--- a/debian/control.in
+++ b/debian/control.in
@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Build-Depends: cdbs (>= 0.4.90),
-               debhelper (>= 9),
+               debhelper (>= 9.20160114~),
                dpkg-dev (>= 1.16.1),
                dh-autoreconf,
                adwaita-icon-theme,
                intltool (>= 0.35.0),
                gnome-pkg-tools (>= 0.10),
                yelp-tools,
-               gtk-doc-tools (>= 1.0),
+               gtk-doc-tools (>= 1.13),
                libx11-dev,
                libcairo2-dev (>= 1.10.0),
                libgtk-3-dev (>= 3.16.0),
@@ -142,7 +142,7 @@ Provides: gir1.2-evince-document-3.0,
           gir1.2-evince-view-3.0
 Description: GObject introspection data for the evince libraries
  This package contains introspection data for the libevview and
- libevdocument library.
+ libevdocument libraries.
  .
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
