--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,8 @@ DEB_CONFIGURE_EXTRA_FLAGS += --enable-djvu \
                              --enable-xps \
                              --enable-comics \
                              --enable-introspection \
-                             --enable-gtk-doc
+                             --enable-gtk-doc \
+                             --enable-libgnome-desktop
 
 DEB_DH_MAKESHLIBS_ARGS += -X /usr/lib/nautilus/ \
                           -X /usr/lib/evince/ \
@@ -26,3 +27,4 @@ DEB_DH_MAKESHLIBS_ARGS += -X /usr/lib/nautilus/ \
 
 DEB_DH_SHLIBDEPS_ARGS += -X /usr/lib/nautilus/
 
+DEB_DH_STRIP_ARGS_ALL = --dbgsym-migration='evince-dbg (<< 3.20.0-2~)'
