--- a/debian/control
+++ b/debian/control
@@ -63,8 +63,8 @@ Suggests: gvfs,
           unrar,
           poppler-data,
           nautilus
-Breaks: evince-gtk (<< 3.14.1-3~)
-Replaces: evince-gtk (<< 3.14.1-3~)
+Breaks: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
+Replaces: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
