--- a/debian/control.in
+++ b/debian/control.in
@@ -50,7 +50,8 @@ Depends: ${shlibs:Depends},
          evince-common (>= ${gnome:Version}),
          evince-common (<< ${gnome:NextVersion}),
          gnome-icon-theme-symbolic (>= 2.17.1),
-         shared-mime-info
+         shared-mime-info,
+         gsettings-desktop-schemas
 Recommends: dbus-x11
 Provides: pdf-viewer,
           postscript-viewer,
@@ -59,8 +60,8 @@ Suggests: gvfs,
           unrar,
           poppler-data,
           nautilus
-Breaks: evince-gtk (<< 3.14.1-3~)
-Replaces: evince-gtk (<< 3.14.1-3~)
+Breaks: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
+Replaces: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
@@ -80,8 +81,7 @@ Description: dummy package for the transition from evince-gtk to evince
 
 Package: evince-common
 Architecture: all
-Depends: ${misc:Depends},
-         gsettings-desktop-schemas
+Depends: ${misc:Depends}
 Description: Document (PostScript, PDF) viewer - common files
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
