--- a/debian/control.in
+++ b/debian/control.in
@@ -3,39 +3,39 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: cdbs (>= 0.4.90),
+Build-Depends: adwaita-icon-theme,
+               autotools-dev,
+               cdbs (>= 0.4.90),
                debhelper (>= 9.20160114~),
-               dpkg-dev (>= 1.16.1),
                dh-autoreconf,
-               adwaita-icon-theme,
-               intltool (>= 0.35.0),
+               dpkg-dev (>= 1.16.1),
+               gnome-common,
                gnome-pkg-tools (>= 0.10),
-               yelp-tools,
+               gobject-introspection (>= 1.0),
+               gsettings-desktop-schemas-dev,
                gtk-doc-tools (>= 1.13),
-               libx11-dev,
+               intltool (>= 0.35.0),
                libcairo2-dev (>= 1.10.0),
-               libgtk-3-dev (>= 3.16.0),
+               libdjvulibre-dev (>= 3.5.22),
                libgail-3-dev (>= 3.0.2),
+               libgirepository1.0-dev (>= 1.0),
                libglib2.0-dev (>= 2.36),
                libgnome-desktop-3-dev,
-               libgstreamer1.0-dev,
                libgstreamer-plugins-base1.0-dev,
-               libsecret-1-dev (>= 0.5),
-               libxml2-dev (>= 2.5.0),
-               libsm-dev (>= 2:1.0.0),
-               zlib1g-dev,
+               libgstreamer1.0-dev,
+               libgtk-3-dev (>= 3.16.0),
+               libgxps-dev (>= 0.2.1),
+               libkpathsea-dev,
                libnautilus-extension-dev (>= 2.91.4),
                libpoppler-glib-dev (>= 0.33.0),
+               libsecret-1-dev (>= 0.5),
+               libsm-dev (>= 2:1.0.0),
                libspectre-dev (>= 0.2.0),
                libtiff-dev,
-               libdjvulibre-dev (>= 3.5.22),
-               libkpathsea-dev,
-               libgxps-dev (>= 0.2.1),
-               autotools-dev,
-               gobject-introspection (>= 1.0),
-               libgirepository1.0-dev (>= 1.0),
-               gsettings-desktop-schemas-dev,
-               gnome-common
+               libx11-dev,
+               libxml2-dev (>= 2.5.0),
+               yelp-tools,
+               zlib1g-dev
 Standards-Version: 3.9.7
 Homepage: https://wiki.gnome.org/Apps/Evince
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/evince
@@ -43,25 +43,19 @@ Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/evince
 
 Package: evince
 Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
+Depends: evince-common (<< ${gnome:NextVersion}),
+         evince-common (>= ${gnome:Version}),
+         gsettings-desktop-schemas,
          libevdocument3-4 (= ${binary:Version}),
          libevview3-3 (= ${binary:Version}),
-         evince-common (>= ${gnome:Version}),
-         evince-common (<< ${gnome:NextVersion}),
-         gnome-icon-theme-symbolic (>= 2.17.1),
          shared-mime-info,
-         gsettings-desktop-schemas
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: dbus-x11
-Provides: pdf-viewer,
-          postscript-viewer,
-          djvu-viewer
-Suggests: gvfs,
-          unrar,
-          poppler-data,
-          nautilus
-Breaks: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
-Replaces: evince-gtk (<< 3.14.1-3~), evince-common (<< 3.20.0-2~)
+Provides: djvu-viewer, pdf-viewer, postscript-viewer
+Suggests: gvfs, nautilus, poppler-data, unrar
+Breaks: evince-common (<< 3.20.0-2~), evince-gtk (<< 3.14.1-3~)
+Replaces: evince-common (<< 3.20.0-2~), evince-gtk (<< 3.14.1-3~)
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
@@ -74,8 +68,7 @@ Package: evince-gtk
 Section: oldlibs
 Priority: extra
 Architecture: any
-Depends: evince (= ${binary:Version}),
-         ${misc:Depends},
+Depends: evince (= ${binary:Version}), ${misc:Depends}
 Description: dummy package for the transition from evince-gtk to evince
  This package is a transitional dummy package. It can be safely removed.
 
@@ -95,8 +88,7 @@ Description: Document (PostScript, PDF) viewer - common files
 Package: libevdocument3-4
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends},
-         ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Document (PostScript, PDF) rendering library
  This package contains libevdocument, which performs the rendering of the
  documents.
@@ -106,9 +98,7 @@ Description: Document (PostScript, PDF) rendering library
 Package: libevview3-3
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
-         gstreamer1.0-plugins-base
+Depends: gstreamer1.0-plugins-base, ${misc:Depends}, ${shlibs:Depends}
 Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
  This package contains libevview, which provides GTK+ widgets for displaying
  documents.
@@ -116,12 +106,12 @@ Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
 Package: libevince-dev
 Architecture: any
 Section: libdevel
-Depends: libevdocument3-4 (= ${binary:Version}),
+Depends: gir1.2-evince-3.0 (= ${binary:Version}),
+         libevdocument3-4 (= ${binary:Version}),
          libevview3-3 (= ${binary:Version}),
-         gir1.2-evince-3.0 (= ${binary:Version}),
-         ${misc:Depends},
+         libglib2.0-dev (>= 2.36.0),
          libgtk-3-dev (>= 3.16.0),
-         libglib2.0-dev (>= 2.36.0)
+         ${misc:Depends}
 Description: Document (PostScript, PDF) rendering library - development files
  This package contains evince-related libraries for rendering and displaying
  Evince documents like PostScript (PS), Encapsulated PostScript (EPS), DjVu,
@@ -135,11 +125,8 @@ Description: Document (PostScript, PDF) rendering library - development files
 Package: gir1.2-evince-3.0
 Section: introspection
 Architecture: any
-Depends: ${gir:Depends},
-         ${shlibs:Depends},
-         ${misc:Depends}
-Provides: gir1.2-evince-document-3.0,
-          gir1.2-evince-view-3.0
+Depends: ${gir:Depends}, ${misc:Depends}, ${shlibs:Depends}
+Provides: gir1.2-evince-document-3.0, gir1.2-evince-view-3.0
 Description: GObject introspection data for the evince libraries
  This package contains introspection data for the libevview and
  libevdocument libraries.
@@ -153,4 +140,3 @@ Description: GObject introspection data for the evince libraries
  .
  It can be used by packages using the GIRepository format to generate
  dynamic bindings.
-
