--- a/debian/control.in
+++ b/debian/control.in
@@ -7,6 +7,7 @@ Build-Depends: adwaita-icon-theme,
                autotools-dev,
                cdbs (>= 0.4.90),
                debhelper (>= 9.20160114~),
+               dh-apparmor,
                dh-autoreconf,
                dpkg-dev (>= 1.16.1),
                gnome-common,
