--- a/debian/control.in
+++ b/debian/control.in
@@ -88,6 +88,7 @@ Description: Document (PostScript, PDF) viewer - common files
 
 Package: libevdocument3-4
 Architecture: any
+Multi-Arch: same
 Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Breaks: evince-common (<< 3.20.0-2~)
@@ -100,6 +101,7 @@ Description: Document (PostScript, PDF) rendering library
 
 Package: libevview3-3
 Architecture: any
+Multi-Arch: same
 Section: libs
 Depends: gstreamer1.0-plugins-base, ${misc:Depends}, ${shlibs:Depends}
 Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
@@ -108,6 +110,7 @@ Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
 
 Package: libevince-dev
 Architecture: any
+Multi-Arch: same
 Section: libdevel
 Depends: gir1.2-evince-3.0 (= ${binary:Version}),
          libevdocument3-4 (= ${binary:Version}),
@@ -128,6 +131,7 @@ Description: Document (PostScript, PDF) rendering library - development files
 Package: gir1.2-evince-3.0
 Section: introspection
 Architecture: any
+Multi-Arch: same
 Depends: ${gir:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Provides: gir1.2-evince-document-3.0, gir1.2-evince-view-3.0
 Description: GObject introspection data for the evince libraries
