--- a/debian/rules
+++ b/debian/rules
@@ -10,8 +10,13 @@ include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-version.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
 
+export DEB_DH_AUTORECONF_ARGS = --as-needed
+
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
 include /usr/share/dpkg/buildflags.mk
+
+# Mozilla plugins shouldn't be installed in multi-arch path
+export BROWSER_PLUGIN_DIR = /usr/lib/mozilla/plugins
 
 DEB_CONFIGURE_EXTRA_FLAGS += --libdir="\$${prefix}/lib/$(DEB_HOST_MULTIARCH)" \
                              --libexecdir=/usr/lib/evince \
