--- a/debian/control.in
+++ b/debian/control.in
@@ -55,8 +55,12 @@ Depends: evince-common (<< ${gnome:NextVersion}),
 Recommends: dbus-x11
 Provides: djvu-viewer, pdf-viewer, postscript-viewer
 Suggests: gvfs, nautilus, poppler-data, unrar
-Breaks: evince-common (<< 3.20.0-2~), evince-gtk (<< 3.14.1-3~)
-Replaces: evince-common (<< 3.20.0-2~), evince-gtk (<< 3.14.1-3~)
+Breaks: apparmor-profiles-extra (<< 1.7~),
+        evince-common (<< 3.20.0-2~),
+        evince-gtk (<< 3.14.1-3~)
+Replaces: apparmor-profiles-extra (<< 1.7~),
+          evince-common (<< 3.20.0-2~),
+          evince-gtk (<< 3.14.1-3~)
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
