--- a/debian/rules
+++ b/debian/rules
@@ -1,42 +1,46 @@
 #!/usr/bin/make -f
 
+include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
+include /usr/share/dpkg/buildflags.mk
+
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-include /usr/share/cdbs/1/rules/autoreconf.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/gnome.mk
-include /usr/share/cdbs/1/rules/utils.mk
-include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
-include /usr/share/gnome-pkg-tools/1/rules/gnome-version.mk
-include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
-
-export DEB_DH_AUTORECONF_ARGS = --as-needed
-
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-z,defs -Wl,-O1 -Wl,--as-needed
-include /usr/share/dpkg/buildflags.mk
 
 # Mozilla plugins shouldn't be installed in multi-arch path
 export BROWSER_PLUGIN_DIR = /usr/lib/mozilla/plugins
 
-DEB_CONFIGURE_EXTRA_FLAGS += --libdir="\$${prefix}/lib/$(DEB_HOST_MULTIARCH)" \
-                             --libexecdir=/usr/lib/evince \
-                             --enable-djvu \
-                             --enable-dvi \
-                             --enable-xps \
-                             --enable-comics \
-                             --enable-introspection \
-                             --enable-gtk-doc \
-                             --enable-libgnome-desktop
+%:
+	dh $@ --with autoreconf,gir,gnome
 
-DEB_DH_MAKESHLIBS_ARGS += -X /usr/lib/nautilus/ \
-                          -X /usr/lib/$(DEB_HOST_MULTIARCH)/evince/ \
-                          -V -- -c4
+override_dh_autoreconf:
+	dh_autoreconf --as-needed
 
-DEB_DH_SHLIBDEPS_ARGS += -X /usr/lib/nautilus/
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--libexecdir=/usr/lib/evince \
+		--enable-djvu \
+		--enable-dvi \
+		--enable-xps \
+		--enable-comics \
+		--enable-introspection \
+		--enable-gtk-doc \
+		--enable-libgnome-desktop
 
-DEB_DH_STRIP_ARGS_ALL = --dbgsym-migration='evince-dbg (<< 3.20.0-2~)'
+override_dh_makeshlibs:
+	dh_makeshlibs \
+		-X /usr/lib/nautilus/ \
+		-X /usr/lib/$(DEB_HOST_MULTIARCH)/evince/ \
+		-V -- -c4
 
-install/evince::
+override_dh_shlibdeps:
+	dh_shlibdeps -X /usr/lib/nautilus/
+
+override_dh_strip:
+	dh_strip --dbgsym-migration='evince-dbg (<< 3.20.0-2~)'
+
+override_dh_install:
+	dh_install
 	install -m 0644 -D debian/apparmor-profile debian/evince/etc/apparmor.d/usr.bin.evince
 	install -m 0644 -D debian/apparmor-profile.abstraction debian/evince/etc/apparmor.d/abstractions/evince
 	install -m 0644 -D debian/evince.apport debian/evince/usr/share/apport/package-hooks/source_evince.py
