--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ override_dh_strip:
 	dh_strip --dbgsym-migration='evince-dbg (<< 3.20.0-2~)'
 
 override_dh_install:
-	dh_install
+	dh_install --list-missing
 	install -m 0644 -D debian/apparmor-profile debian/evince/etc/apparmor.d/usr.bin.evince
 	install -m 0644 -D debian/apparmor-profile.abstraction debian/evince/etc/apparmor.d/abstractions/evince
 	install -m 0644 -D debian/evince.apport debian/evince/usr/share/apport/package-hooks/source_evince.py
