--- a/debian/control.in
+++ b/debian/control.in
@@ -4,10 +4,8 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Build-Depends: adwaita-icon-theme,
-               autotools-dev,
-               debhelper (>= 9.20160114~),
+               debhelper (>= 10),
                dh-apparmor,
-               dh-autoreconf,
                dpkg-dev (>= 1.16.1),
                gnome-common,
                gnome-pkg-tools (>= 0.10),
