--- a/debian/control.in
+++ b/debian/control.in
@@ -54,7 +54,6 @@ Provides: djvu-viewer,
           pdf-viewer,
           postscript-viewer
 Suggests: gvfs,
-          nautilus,
           poppler-data,
           unrar
 Breaks: apparmor-profiles-extra (<< 1.7~),
@@ -63,6 +62,7 @@ Breaks: apparmor-profiles-extra (<< 1.7~),
 Replaces: apparmor-profiles-extra (<< 1.7~),
           evince-common (<< 3.20.0-2~),
           evince-gtk (<< 3.14.1-3~)
+Enhances: nautilus
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
  PostScript (PS), Encapsulated PostScript (EPS), DjVu, DVI, Portable
