Add Suggests: nautilus-sendto. It is required by the "Send To …" file menu entry. (Closes: #723071)

--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Provides: djvu-viewer,
           pdf-viewer,
           postscript-viewer
 Suggests: gvfs,
+          nautilus-sendto,
           poppler-data,
           unrar
 Breaks: apparmor-profiles-extra (<< 1.7~),
