--- a/debian/control.in
+++ b/debian/control.in
@@ -54,6 +54,7 @@ Provides: djvu-viewer,
           pdf-viewer,
           postscript-viewer
 Suggests: gvfs,
+          nautilus-sendto,
           poppler-data,
           unrar
 Breaks: apparmor-profiles-extra (<< 1.7~),
