Build-depend on libarchive-dev and libgdk-pixbuf2.0-dev

--- a/debian/control.in
+++ b/debian/control.in
@@ -13,9 +13,11 @@ Build-Depends: adwaita-icon-theme,
                gsettings-desktop-schemas-dev,
                gtk-doc-tools (>= 1.13),
                intltool (>= 0.35.0),
+               libarchive-dev (>= 3.1.2),
                libcairo2-dev (>= 1.10.0),
                libdjvulibre-dev (>= 3.5.22),
                libgail-3-dev (>= 3.0.2),
+               libgdk-pixbuf2.0-dev (>= 2.36.5),
                libgirepository1.0-dev (>= 1.0),
                libglib2.0-dev (>= 2.36),
                libgnome-desktop-3-dev,
