--- a/debian/control.in
+++ b/debian/control.in
@@ -38,8 +38,8 @@ Build-Depends: adwaita-icon-theme,
                zlib1g-dev
 Standards-Version: 4.1.1
 Homepage: https://wiki.gnome.org/Apps/Evince
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/evince
-Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/evince
+Vcs-Git: https://anonscm.debian.org/git/pkg-gnome/evince.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-gnome/evince.git
 
 Package: evince
 Architecture: any
