--- a/debian/control
+++ b/debian/control
@@ -41,9 +41,9 @@ Build-Depends: adwaita-icon-theme,
                yelp-tools,
                zlib1g-dev
 Standards-Version: 4.1.2
+Vcs-Browser: https://salsa.debian.org/gnome-team/evince
+Vcs-Git: https://salsa.debian.org/gnome-team/evince.git
 Homepage: https://wiki.gnome.org/Apps/Evince
-Vcs-Git: https://anonscm.debian.org/git/pkg-gnome/evince.git
-Vcs-Browser: https://anonscm.debian.org/git/pkg-gnome/evince.git
 
 Package: evince
 Architecture: any
