--- a/debian/control.in
+++ b/debian/control.in
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
 Build-Depends: adwaita-icon-theme,
+               appstream,
                debhelper (>= 11),
                dh-apparmor,
                dpkg-dev (>= 1.16.1),
@@ -12,7 +13,7 @@ Build-Depends: adwaita-icon-theme,
                gobject-introspection (>= 1.0),
                gsettings-desktop-schemas-dev,
                gtk-doc-tools (>= 1.13),
-               intltool (>= 0.35.0),
+               itstool,
                libarchive-dev (>= 3.2.0),
                libcairo2-dev (>= 1.10.0),
                libdjvulibre-dev (>= 3.5.22),
