--- a/debian/control.in
+++ b/debian/control.in
@@ -5,7 +5,7 @@ Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.
 Uploaders: @GNOME_TEAM@
 Build-Depends: adwaita-icon-theme,
                appstream,
-               debhelper (>= 11),
+               debhelper-compat (= 12),
                dh-apparmor,
                dpkg-dev (>= 1.16.1),
                gnome-common,
