updated nautilus requirement

--- a/debian/control.in
+++ b/debian/control.in
@@ -30,7 +30,7 @@ Build-Depends: adwaita-icon-theme,
                libgtk-3-dev (>= 3.16.0),
                libgxps-dev (>= 0.2.1),
                libkpathsea-dev,
-               libnautilus-extension-dev (>= 3.21.92-3~),
+               libnautilus-extension-dev (>= 3.28),
                libpoppler-glib-dev (>= 0.33.0),
                libsecret-1-dev (>= 0.5),
                libsm-dev (>= 2:1.0.0),
