debian/control.in: workaround gnome-pkg-tools gnome computation being broken with the new version scheme

--- a/debian/control
+++ b/debian/control
@@ -58,8 +58,9 @@ Homepage: https://wiki.gnome.org/Apps/Evince
 
 Package: evince
 Architecture: any
-Depends: evince-common (<< ${gnome:NextVersion}),
-         evince-common (>= ${gnome:Version}),
+# ${gnome:NextVersion} isn't working with GNOME 40 yet
+Depends: evince-common (<< 41),
+         evince-common (>= 40),
          gsettings-desktop-schemas,
          libevdocument3-4 (= ${binary:Version}),
          libevview3-3 (= ${binary:Version}),
