debian/gbp.conf: filter out synctex code copy
Usually, we do this in debian/copyright but it's a big project
to switch evince's copyright file to format 1.0

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -10,6 +10,8 @@ sign-tags = True
 multimaint-merge = True
 
 [import-orig]
+filter-pristine-tar = True
+filter = ['cut-n-paste/synctex']
 postimport = dch -v%(version)s New upstream release; git add debian/changelog; debcommit
 upstream-vcs-tag = %(version%~%.)s
 
