debian/control.in: Bump minimum poppler to 0.86 & libtiff to 4

--- a/debian/control
+++ b/debian/control
@@ -38,12 +38,12 @@ Build-Depends: adwaita-icon-theme,
                libkpathsea-dev,
                libnautilus-extension-dev (>= 3.28),
                libpango1.0-doc,
-               libpoppler-glib-dev (>= 0.33.0),
+               libpoppler-glib-dev (>= 0.86.0),
                libsecret-1-dev (>= 0.5),
                libsm-dev (>= 2:1.0.0),
                libspectre-dev (>= 0.2.0),
                libsynctex-dev,
-               libtiff-dev,
+               libtiff-dev (>= 4),
                libx11-dev,
                libxml2-dev (>= 2.5.0),
                meson (>= 0.50),
