debian/gbp.conf: Filter out subprojects
Usually, we do this in debian/copyright but it's a big project
to switch evince's copyright file to format 1.0

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -11,7 +11,7 @@ multimaint-merge = True
 
 [import-orig]
 filter-pristine-tar = True
-filter = ['cut-n-paste/synctex']
+filter = ['cut-n-paste/synctex', 'subprojects']
 postimport = dch -v%(version)s New upstream release; git add debian/changelog; debcommit
 upstream-vcs-tag = %(version%~%.)s
 
