debian/control.in: Build-Depend on gi-docgen instead of gtk-doc-tools

--- a/debian/control.in
+++ b/debian/control.in
@@ -11,7 +11,7 @@ Build-Depends: adwaita-icon-theme,
                dpkg-dev (>= 1.16.1),
                gobject-introspection (>= 1.0),
                gsettings-desktop-schemas-dev,
-               gtk-doc-tools (>= 1.13),
+               gi-docgen (>= 2021.1),
                itstool,
                libarchive-dev (>= 3.2.0),
                libcairo2-dev (>= 1.10.0),
