debian/control.in: Use source:Version for Depends: evince-common
instead of gnome:Version which may not be as useful
and was broken with prereleases like 42~beta with the current
gnome-pkg-tools

--- a/debian/control.in
+++ b/debian/control.in
@@ -51,8 +51,7 @@ Homepage: https://wiki.gnome.org/Apps/Evince
 
 Package: evince
 Architecture: any
-Depends: evince-common (<< ${gnome:NextVersion}),
-         evince-common (>= ${gnome:Version}),
+Depends: evince-common (>= ${source:Version}),
          gsettings-desktop-schemas,
          libevdocument3-4 (= ${binary:Version}),
          libevview3-3 (= ${binary:Version}),
