d/control.in: Drop alternative B-D on libgdk-pixbuf2.0-dev
libgdk-pixbuf-2.0-dev has been available since bullseye.

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: adwaita-icon-theme,
                libcairo2-dev (>= 1.10.0),
                libdjvulibre-dev (>= 3.5.22),
                libgail-3-dev (>= 3.0.2),
-               libgdk-pixbuf-2.0-dev (>= 2.40) | libgdk-pixbuf2.0-dev (>= 2.40),
+               libgdk-pixbuf-2.0-dev (>= 2.40),
                libgdk-pixbuf2.0-doc,
                libgirepository1.0-dev (>= 1.0),
                libglib2.0-dev (>= 2.38),
