--- a/debian/control.in
+++ b/debian/control.in
@@ -5,6 +5,7 @@ Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.
 Uploaders: @GNOME_TEAM@
 Build-Depends: adwaita-icon-theme,
                debhelper-compat (= 13),
+               desktop-file-utils,
                dh-apparmor,
                dh-sequence-gir,
                dh-sequence-gnome (>= 0.22),
