debian/control.in: Don't Build-Depend on adwaita-icon-theme

--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,7 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Amin Bandali <bandali@ubuntu.com>, Jeremy Bícha <jbicha@ubuntu.com>, Laurent Bigonville <bigon@debian.org>, Marco Trevisan (Treviño) <marco@ubuntu.com>, Tim Lunn <tim@feathertop.org>
-Build-Depends: adwaita-icon-theme,
-               debhelper-compat (= 13),
+Build-Depends: debhelper-compat (= 13),
                desktop-file-utils,
                dh-apparmor,
                dh-sequence-gir,
