--- a/debian/control.in
+++ b/debian/control.in
@@ -3,8 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: adwaita-icon-theme,
-               debhelper-compat (= 13),
+Build-Depends: debhelper-compat (= 13),
                desktop-file-utils,
                dh-apparmor,
                dh-sequence-gir,
